testsuite/tests/typecheck/should_fail/T2846b.stderr
T2846b.hs:5:10: error: [GHC-91028]
    • Couldn't match expected type ‘a0’
                  with actual type ‘[Num a1 => a1]’
      Cannot instantiate unification variable ‘a0’
      with a type involving polytypes: [Num a1 => a1]
    • In the first argument of ‘show’, namely
        ‘([1, 2, 3] :: [Num a => a])’
      In the expression: show ([1, 2, 3] :: [Num a => a])
      In an equation for ‘f’: f = show ([1, 2, 3] :: [Num a => a])

